# CAD_Sketcher

./: .gitignore  404.html  README.md  __init__.py  assets_manager.py  base.py  blender  blender_manifest.toml  class_defines.py  converters.py  convertors.py  curve_solver.py  declarations.py  draw_handler.py  event_system.py  fork-ecosky.md  functions.py  gizmos.py  global_data.py  handlers.py  icon_manager.py  index.html  install.py  interfaces.py  keymaps.py  mkdocs.yml  objects.inv  operators.py  operators_temp.py  preferences.py  register_full.py  registration.py  registration_delayed.py  run_tests.bat  run_tests.sh  run_tests_interactive.bat  run_tests_interactive.sh  serialize.py  shaders.py  sitemap.xml  (+6 more)
.github/: FUNDING.yml
advanced/: index.html
base/: __init__.py  constants.py  install_op.py  preferences.py  theme.py
code_docs/: index.html
constraints/: index.html
core/: __init__.py
docs/: advanced.md  code_docs.md  constraints.md  entities.md  getting_started.md  index.md  installation.md  integration.md  interaction_system.md  mkdocs.yml  reference.md  requirements.txt  solver.md  tools.md  user_interface.md
entities/: index.html
experiments/: find_slvs.py  probe_slvs_wrapper.py  test_all_attrs.py  test_arc_debug.py  test_arc_handles.py  test_attributes.py  test_bezier_tessellation.py  test_circle_debug.py  test_constraint_refs.py  test_constraint_values.py  test_curve_api.py  test_curve_deletion.py  test_load.py  (+46 more)
mcp_package/: AGENT_INSTRUCTIONS.md  README.md  pyproject.toml
mcp_package/cad_sketcher_mcp/: __init__.py  __main__.py  server.py
(+363 files in other folders)
